# TailCam

./: .dockerignore  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  install-docker.sh  install-linux.sh  install-macos.sh  install.ps1  install.sh  pyproject.toml  uninstall-linux.sh  uninstall-macos.sh  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  desktop.yml  docker-publish.yml
browser-extensions/: README.md  build.py
browser-extensions/chrome/: manifest.json
browser-extensions/edge/: manifest.json
browser-extensions/firefox/: manifest.json
browser-extensions/safari/: convert-safari.sh
browser-extensions/shared/: background.js
browser-extensions/shared/glance/: glance.css  glance.html  glance.js
browser-extensions/shared/lib/: api.js  compat.js  format.js  settings.js
browser-extensions/shared/options/: options.css  options.html  options.js
browser-extensions/shared/popup/: popup.css  popup.html  popup.js
desktop/scripts/: build-sidecar.py  smoke-sidecar.py
desktop/sidecars/: tailcam-node.spec
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: tailcam.toml
desktop/src-tauri/src/: lib.rs  main.rs  node.rs  notifications.rs  tray.rs  windows.rs
docker/: entrypoint.sh
docs/: ai-detection-plan.md  mcp-security.md  mcp.md  tailscale-grants.md  web-ui-plan.md
docs/design-prototype/: DESIGN-README.md  design-chat.md  styles.css
docs/design-prototype/js/: app.jsx  icons.jsx  mock.jsx  screens1.jsx  screens2.jsx  ui.jsx  viewer.jsx
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-06-14-tailcam-desktop-phase-1.md  2026-06-14-tailcam-desktop-roadmap.md
docs/superpowers/specs/: 2026-06-13-tailcam-desktop-command-center-design.md  2026-06-17-tailcam-mcp-design.md
examples/mcp/: claude_desktop_config.json  codex.config.toml  hermes-openclaw.json
examples/notifications/: sample-payloads.json
examples/plugins/: README.md  ntfy_channel.py
examples/skills/: tailcam-alerts.md
marketplace/: README.md  TEMPLATE.py  build_index.py  index.json
marketplace/plugins/: event_logger.py  ntfy_notifier.py  openai_analyzer.py  slack_notifier.py
src/anycam/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  paths.py  update.py
src/anycam/ai/: analyzer.py
src/anycam/camera/: __init__.py  enumerate.py  frame.py  manager.py  source.py  worker.py
src/anycam/cluster/: __init__.py  fleet.py  service.py
src/anycam/media/: __init__.py  gallery.py  recorder.py  snapshot.py
src/anycam/motion/: __init__.py  events.py  worker.py
src/anycam/persistence/: __init__.py  models.py  store.py
src/anycam/service/: __init__.py  installer.py
src/anycam/streaming/: __init__.py  backend.py  mjpeg.py
src/anycam/tailscale/: client.py
src/anycam/web/: __init__.py  app.py  context.py  deps.py  routes_api.py  routes_pages.py  routes_proxy.py  routes_stream.py  schemas.py  security.py
src/tailcam/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  migrate.py  paths.py  proc.py  update.py
src/tailcam/activelearning/: __init__.py  annotations.py  backends.py  florence.py  labelstudio.py  qwen.py  service.py
src/tailcam/ai/: __init__.py  analyzer.py  detector.py  pull.py
src/tailcam/camera/: enumerate.py  frame.py  manager.py  properties.py  source.py  transforms.py  worker.py
src/tailcam/cluster/: __init__.py  fleet.py  service.py
src/tailcam/desktop/: __init__.py  app.py  linux_desktop.py  macos_bundle.py  menu.py  nodes.py  server.py  state.py  tray.py  updates.py  window.py  windows_shortcut.py
src/tailcam/integrations/: __init__.py  base.py  homeassistant.py  homekit.py
src/tailcam/management/: __init__.py  audit.py  capabilities.py  health.py
src/tailcam/mcp/: __init__.py  client.py  errors.py  prompts.py  protocol.py  resources.py  server.py  toolctx.py  tools.py  transport_http.py  transport_stdio.py
src/tailcam/media/: gallery.py  recorder.py  snapshot.py
src/tailcam/motion/: detector.py  events.py  worker.py
src/tailcam/notify/: service.py
src/tailcam/persistence/: models.py  store.py
src/tailcam/plugins/: hookspecs.py  market.py  registry.py  sdk.py
src/tailcam/security/: __init__.py  principal.py
src/tailcam/service/: __init__.py  installer.py
src/tailcam/streaming/: backend.py  encoder.py  mjpeg.py
src/tailcam/tailscale/: __init__.py  client.py
src/tailcam/timelapse/: __init__.py  analyzer.py  ffmpeg.py  presets.py  rife.py  service.py  worker.py
src/tailcam/training/: __init__.py  engine.py  inference.py  runner.py  service.py
src/tailcam/web/: app.py  context.py  deps.py  routes_active.py  routes_api.py  routes_fleet_v1.py  routes_node_v1.py  routes_pages.py  routes_proxy.py  routes_stream.py  schemas.py  security.py
tests/: conftest.py  test_active_learning.py  test_ai.py  test_api.py  test_audit.py  test_browser_extensions.py  test_builtin_detection.py  test_cli.py  test_cluster.py  test_desktop.py  test_desktop_sidecar.py  test_detection.py  test_docs_ui.py  test_enumerate.py  test_fleet_api.py  test_frame_buffer.py  test_frame_consumer.py  test_installer_script.py  test_integrations.py  test_management_health.py  test_mcp.py  test_mjpeg.py  test_motion_detector.py  test_node_api.py  test_notify.py  test_plugin_market.py  test_plugins.py  test_principal.py  test_proc.py  test_rename_migration.py  test_service_control.py  test_storage.py  test_tailscale.py  test_timelapse.py  test_timelapse_analyzer.py  test_timelapse_printer.py  test_training.py  test_transforms.py  test_update.py  test_version.py  (+1 more)
web-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: icons.tsx  main.tsx  styles.css  types.ts
web-ui/src/api/: client.test.ts  client.ts  hooks.ts
web-ui/src/app/: AppShell.tsx
web-ui/src/brand/: mark.tsx
web-ui/src/components/: ActivityFeed.tsx  AnnotationEditor.tsx  BootOverlay.tsx  CameraTile.tsx  CommandPalette.tsx  IntegrationsPanel.tsx  LiveViewer.tsx  Markdown.tsx  NodeHealthCard.tsx  NotificationsSettings.tsx  (+5 more)
(+155 files in other folders)
