[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anycam"
dynamic = ["version"]
description = "View any webcam from anywhere over Tailscale, with a web UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AnyCam contributors" }]
keywords = ["webcam", "tailscale", "streaming", "mjpeg", "monitoring", "camera"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.34",
    "opencv-python-headless~=4.10",
    "numpy~=2.1",
    "jinja2~=3.1",
    "typer~=0.15",
    "pydantic~=2.9",
    "anyio~=4.6",
    "tomli-w~=1.0",
    "tomli~=2.0; python_version < '3.11'",
    "httpx~=0.28",
]

[project.optional-dependencies]
webrtc = ["aiortc~=1.9"]
turbojpeg = ["PyTurboJPEG~=1.7"]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "httpx~=0.27",
    "ruff~=0.7",
    "mypy~=1.13",
]

[project.urls]
Homepage = "https://github.com/factshin/anycam"
Repository = "https://github.com/factshin/anycam"

[project.scripts]
anycam = "anycam.cli:main"

[tool.hatch.version]
path = "src/anycam/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/anycam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: FastAPI uses `Depends()` as a default argument by design.
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
