[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailcam"
dynamic = ["version"]
description = "TailCam — view any webcam from anywhere over Tailscale, with a web UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TailCam contributors" }]
keywords = ["webcam", "tailscale", "streaming", "mjpeg", "monitoring", "camera"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.34",
    "opencv-python-headless~=4.10",
    "numpy~=2.1",
    "jinja2~=3.1",
    "typer~=0.15",
    "pydantic~=2.9",
    "anyio~=4.6",
    "pluggy~=1.5",
    "tomli-w~=1.0",
    "tomli~=2.0; python_version < '3.11'",
    "httpx~=0.28",
    # Static ffmpeg for timelapse post-processing (smoothing/interpolation), so
    # it works out of the box; a system ffmpeg is preferred when present.
    "imageio-ffmpeg~=0.5",
    # Windows only: friendly DirectShow camera names (import is guarded, so
    # TailCam still works if it's unavailable).
    "pygrabber~=0.2; sys_platform == 'win32'",
]

[project.optional-dependencies]
webrtc = ["aiortc~=1.9"]
turbojpeg = ["PyTurboJPEG~=1.7"]
# Apple HomeKit bridge (HAP). The [QRCode] extra pulls base36 + pyqrcode for the
# pairing QR. Live video also needs `ffmpeg` on the host.
homekit = ["HAP-python[QRCode]>=4.9,<6"]
# Home Assistant MQTT discovery (cameras themselves need no extra — they use
# HA's built-in MJPEG IP Camera integration).
mqtt = ["paho-mqtt~=2.1"]
# On-device model training (AI Studio → Training). Ultralytics pulls in torch,
# which is huge and platform/GPU-specific — that's why it's opt-in.
training = ["ultralytics>=8.3"]
# Human-in-the-loop active learning (AI Studio → Active Learning): the official
# Label Studio Python SDK for the review workflow. The Label Studio *server* is
# installed separately (pip install label-studio) or run anywhere reachable.
activelearning = ["label-studio-sdk>=1.0"]
# Florence-2 labeling/fine-tuning. timm + einops are required by the model's
# remote code; runs on CUDA, Apple MPS, or CPU (slow).
florence2 = ["torch>=2.2", "transformers>=4.44", "timm>=1.0", "einops>=0.8", "pillow>=10"]
# Qwen2.5-VL inference. qwen-vl-utils handles its image preprocessing. For
# fine-tuning additionally `pip install unsloth` on a Linux CUDA machine —
# unsloth pins CUDA-specific wheels, so it is deliberately not an extra here.
qwen-vl = ["torch>=2.2", "transformers>=4.49", "qwen-vl-utils>=0.0.8",
           "accelerate>=1.0", "pillow>=10"]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "httpx~=0.27",
    "ruff~=0.7",
    "mypy~=1.13",
]

[project.urls]
Homepage = "https://github.com/factshin/tailcam"
Repository = "https://github.com/factshin/tailcam"

[project.scripts]
tailcam = "tailcam.cli:main"

[tool.hatch.version]
path = "src/tailcam/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tailcam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: FastAPI uses `Depends()` as a default argument by design.
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
