[package]
name = "tailcam-desktop"
version = "0.90.0"
edition = "2021"
build = "build.rs"

[lib]
name = "tailcam_desktop_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tailcam-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
toml = "0.9"
